# restaurant-booking-voice-agent

./: .env.example  README.md  pyproject.toml  setup.sh
experimental/: weather.ipynb
src/: agent.py
